# apiari-codex-sdk

./: CLAUDE.md  Cargo.toml
src/: client.rs  error.rs  lib.rs  options.rs  transport.rs  types.rs
tests/: integration.rs
