[package]
name = "apiari-codex-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Rust SDK for the Codex CLI — spawn and stream codex exec sessions"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
